README.md structured & update depencies

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,4 @@
-# Uncomment this line to define a global platform for your project
+#  Google Maps SDK requires platform version 11
 platform :ios, '11.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
